namespace DotNetFlow.Sflow
{
    /// <summary>
    /// Represents the sFlow SMI Private Enterprise Code.
    /// </summary>
    public enum Enterprise
    {
        StandardSflow = 0 // InMon Corporation
    }
}